package edu.fiuba.algo3.tp2N10.Modelo.Puntaje;

public interface Puntaje {

    Integer puntuar(Integer aciertos, Integer errores);
}
